Usuarios CRUD Listo

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT = 8080
+MONGO_DB_CNN ='mongodb+srv://user_node_cafe:Y0ziTz1LX4zzvXWC@miclustercafe.gqzmjow.mongodb.net/cafeDB'
+USER = user_node_cafe
+PASS = Y0ziTz1LX4zzvXWC
